--- a/package.json
+++ b/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "service",
+  "name": "socket-service",
   "version": "1.0.0",
-  "description": "Node instance",
-  "main": "server.js",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "test",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/varmahemanth9/services.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/varmahemanth9/services/issues"
-  },
-  "homepage": "https://github.com/varmahemanth9/services#readme",
   "dependencies": {
-    "cors": "^2.8.5",
+    "@socket.io/redis-adapter": "^8.2.1",
+    "@socket.io/sticky": "^1.0.4",
     "express": "^4.18.2",
-    "glob": "^10.3.3",
-    "http": "0.0.1-security",
-    "https": "^1.0.0",
-    "md5": "^2.3.0",
-    "mongoose": "^7.4.2"
+    "helmet": "^7.1.0",
+    "redis": "^4.6.14",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2"
   }
 }
