--- a/userService/package.json
+++ b/userService/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "socket-service",
+  "name": "user-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,16 @@
   "dependencies": {
     "@socket.io/redis-adapter": "^8.2.1",
     "@socket.io/sticky": "^1.0.4",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.1",
     "redis": "^4.6.14",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
